; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/intel/common/extr_sst-firmware.c_sst_dsp_dma_copyfrom.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/intel/common/extr_sst-firmware.c_sst_dsp_dma_copyfrom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sst_dsp = type { i32 }

@SST_HSW_MASK_DMA_ADDR_DSP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sst_dsp_dma_copyfrom(%struct.sst_dsp* %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca %struct.sst_dsp*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.sst_dsp* %0, %struct.sst_dsp** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i64 %3, i64* %8, align 8
  %9 = load %struct.sst_dsp*, %struct.sst_dsp** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @SST_HSW_MASK_DMA_ADDR_DSP, align 4
  %13 = or i32 %11, %12
  %14 = load i64, i64* %8, align 8
  %15 = call i32 @sst_dsp_dma_copy(%struct.sst_dsp* %9, i32 %10, i32 %13, i64 %14)
  ret i32 %15
}

declare dso_local i32 @sst_dsp_dma_copy(%struct.sst_dsp*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
